--- a/main.tex
+++ b/main.tex
@@ -151,12 +151,15 @@
   \begin{wideitemize}
     \item \textbf{Hyperparameter and hyper-parameter tuning:}
     \begin{wideitemize}
-      \item Kernel: The main function of the kernel is to transform the given dataset input data into the required form. There are various types of functions such as linear, polynomial, and radial basis function (RBF). Polynomial and RBF are useful for non-linear hyperplane. Kernels can lead to more accurate classifiers.
-      \item Regularization: $C$ is regularization parameter that controls the trade-off between smooth decision
+      \item \textbf{Kernel:} The main function of the kernel\footnote{Kernels can lead to more accurate classifiers.}
+      is to transform the given dataset input data into the required form. There are various types of
+      functions such as linear, polynomial, and radial basis function (RBF). Polynomial and RBF are
+      useful for non-linear hyperplane.
+      \item \textbf{Regularization:} $C$ is regularization parameter that controls the trade-off between smooth decision
       boundary\footnote{a decision boundary or decision surface is a hyper-surface that partitions
       the underlying vector space into two sets, one for each class.} and classifying training
       points correctly. A large $C$ means you'll get more training points correctly.
-      \item \textit{Gamma}: Gamma defines how far the influence of a single training example reaches.
+      \item \textbf{Gamma}: Gamma defines how far the influence of a single training example reaches.
       A large gamma means the decision boundary is just going to be dependent upon the points that
       are very close to the line.
     \end{wideitemize}
@@ -169,17 +172,17 @@
   \begin{wideitemize}
     \item \textbf{Advantages}
     \begin{wideitemize}
-      \item SVM Classifiers offer good accuracy and perform faster prediction
+      \item SVM Classifiers offer \textbf{good accuracy and perform faster prediction}
       compared to Naive Bayes algorithm. They also use less memory because they
       use a subset of training points in the decision phase. SVM works well with
       a clear margin of separation and with high dimensional space.
     \end{wideitemize}
     \item \textbf{Disadvantages}
     \begin{wideitemize}
-      \item SVM is not suitable for large datasets because of its high training
+      \item SVM is \textbf{not suitable for large datasets} because of its high training
       time and it also takes more time in training compared to Naive Bayes. It
-      works poorly with overlapping classes and is also sensitive to the type
-      of kernel used.
+      \textbf{works poorly with overlapping classes} and is also \textbf{sensitive} to the type
+      of \textbf{kernel} used.
     \end{wideitemize}
   \end{wideitemize}
 
@@ -224,11 +227,10 @@
 
 \begin{frame}[fragile]{\textbf{Q. What else can you say about PCA?}}
   \begin{wideitemize}
-    \item You see, this PCA is a way of compressing the data. That is, if there
-      is only a few principal components then this means that all my vectors can
-      be written as the sum of a few $w$s.
     \item In general terms, this PCA process is about finding the underlying
-      patterns of the data and also gives you a method for data compression.
+    patterns of the data and also gives you a method for data compression.
+    \item That is, if there is only a few principal components then this means that all my vectors can
+    be written as the sum of a few $w$s.
     \item PCA is all about diagonalizing the covariance matrix.
     \item PCA is an exercise in linear algebra on very high dimensional vector spaces.
   \end{wideitemize}
@@ -270,12 +272,11 @@
     \begin{wideitemize}
       \item Dimensionality reduction
       \item Allows estimation of probabilities in high-dimensional data.
-      \item It renders a set of components that are uncorrelated.
+      \item It renders a set of components that are uncorrelated (latent features).
     \end{wideitemize}
     \item \textbf{Disadvantages}
     \begin{wideitemize}
-      \item It has a high computational cost, therefore it cannot be applied to
-      very large datasets.
+      \item It has a high computational cost, meaning it'll struggle with very large datasets.
       \item Non-linear structure is hard to model with PCA.
     \end{wideitemize}
   \end{wideitemize}
